	 not available.
20031014 configure.in: no longer need to explicitly link against zlib
20031014 configure.in, trdos.c: we need <strings.h> for strncasecmp on
	 QNX6 (thanks, Mike Gorchak).
20031015 ui/gtk/statusbar.c: the statusbar should not expand to fill the
	 space available.
20031016 compat/Makefile.am: distribute getopt.h.
20031016 event.c, debugger/debugger.h: must explicitly include glib.h as
	 it is no longer pulled in by libspectrum.
20031020 fuse.c, trdos.c, utils.c: use libspectrum_identify_file_with_class
	 where appropriate.
20031020 utils.c: use TMPDIR before /tmp for temporary files.
20031023 Add simple 'poke finder'.
20031023 fuse.c, osssound.c: more useful error messages if we couldn't
	 initialise the OSS sound code.
20031025 ui/gtk/pokefinder.c: UI improvements.
20031025 ui/gtk/pokefinder.c: keyboard shortcuts
20031026 ui/gtk/debugger.c, ui/gtk/pokefinder.c: correct behaviour if the
	 window receives a delete event.
20031026 pokefinder/pokefinder.c: ensure we get a prototype for memset.
20031027 ui/gtk/gtkui.c: add confirmation dialog if the main window
	 receives a delete-event.
20031027 ui/gtk: "delete-event" is spelt "delete-event", not
	 "delete_event".
20031027 widget/widget.c: Win32 timing routines (Marek).
20031028 Generalise the timer routines (see hacking/timer.txt).
20031028 fuse.[ch], machine.c, utils.c: when looking for ROM/library
	 files, look relative to the directory Fuse started in, not the
	 current directory.
20031028 sdlsound.c: fix memset typo (Marek).
20031028 timer.c: restore old timers only if they exist in timer_pop().
20031028 timer.c: ensure we have the prototype for strerror().
20031029 osssound.c, sdlsound.c, sunsound.c: ensure that we don't try and
	 recursively open the sound device if an error occurs when opening
	 it.
20031029 timer.c: fix typos in Win32 time routines (Marek).
20031029 trdos.c, utils.c: don't assume temp path ends with a slash
	 (Marek).