@@ -56,5 +56,6 @@ int utils_close_file( utils_file *file );
 int utils_write_file( const char *filename, const unsigned char *buffer,
 		      size_t length );
 const char* utils_get_temp_path( void );
+const char* utils_get_home_path( void );
 
 #endif			/* #ifndef FUSE_UTILS_H */
